--- a/theme/html/status.html
+++ b/theme/html/status.html
@@ -84,7 +84,7 @@
 			        	<ul class="site-authors">
 			        		<li><a href="http://www.tomsargent.com/">Thomas J. Sargent</a></li>
 							<li><a href="http://johnstachurski.net/">John Stachurski</a></li>
-							<li><a href = "http://jesseperla.com">Jesse Perla</a></li>
+							<li><a href="http://jesseperla.com/">Jesse Perla</a></li>
 			        	</ul>
 
 		        	</div>
